Fix spacing

--- a/docs/doxygen-awesome-css/doxygen-awesome-sidebar-only.css
+++ b/docs/doxygen-awesome-css/doxygen-awesome-sidebar-only.css
@@ -31,10 +31,10 @@ html {
     /* side nav width. MUST be = `TREEVIEW_WIDTH`.
      * Make sure it is wide enough to contain the page title (logo + title + version)
      */
-    --side-nav-fixed-width: 335px;
+    --side-nav-fixed-width: 370px;
     --menu-display: none;
 
-    --top-height: 120px;
+    --top-height: 140px;
     --toc-sticky-top: -25px;
     --toc-max-height: calc(100vh - 2 * var(--spacing-medium) - 25px);
 }
